Refactor main.rs and update dependencies
Refactored main.rs to simplify component signatures, update server function error handling, and streamline UI logic. Updated Cargo.toml dependencies by removing leptos_router and adding server_fn. Improved CSS and component structure for maintainability and future chart integration.

--- a/CryptoVibeTrade/Cargo.toml
+++ b/CryptoVibeTrade/Cargo.toml
@@ -4,18 +4,15 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-# Leptos fullstack (SSR)
 leptos = { version = "0.7", default-features = false, features = ["ssr"] }
 leptos_axum = { version = "0.7" }
 leptos_meta = { version = "0.7" }
-leptos_router = { version = "0.7" }
+server_fn = "0.7"
 
-# Server
 axum = { version = "0.7", features = ["json"] }
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
 
-# Utils
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 dotenvy = "0.15"
